--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^4.15.1",
-    "@subql/cli": "0.10.0",
-    "@subql/types": "0.8.0",
+    "@subql/cli": "^0.10.0",
+    "@subql/types": "^0.8.0",
     "typescript": "^4.1.3"
   },
   "resolutions": {
-    "@polkadot/api": "4.17.1",
-    "@subql/node": "^0.20.3"
+    "@polkadot/api": "6.3.1",
+    "@subql/node": "^0.22.0"
   },
   "dependencies": {
-    "@subql/node": "^0.20.3"
+    "@subql/node": "^0.22.0"
   }
 }
